--- a/src/scss/phy/list-groups.scss
+++ b/src/scss/phy/list-groups.scss
@@ -63,32 +63,22 @@
   }
 }
 
-@each $palette, $subject-colors in $isaac-color-palettes {
-  @include color-mode($palette) {
-    $subject-color-50: map.get($subject-colors, 50);
-    $subject-color-100: map.get($subject-colors, 100);
-    $subject-color-500: map.get($subject-colors, 500);
+.quiz-level-1-tag {
+  @include pill-tag(var(--subject-color-500), var(--subject-color-100));
+  padding: 0 0.7em;
+  font-weight: bold;
+}
 
-    .quiz-level-1-tag {
-      @include pill-tag($subject-color-500, $subject-color-100);
-      padding: 0 0.7em;
-      border-radius: 15px;
-      font-weight: bold;
-    }
+.quiz-level-2-tag {
+  @include pill-tag(var(--subject-color-50), var(--subject-color-500));
+  padding: 0 0.7em;
+  font-weight: bold;
+}
 
-    .quiz-level-2-tag {
-      @include pill-tag($subject-color-50, $subject-color-500);
-      padding: 0 0.7em;
-      border-radius: 15px;
-      font-weight: bold;
-    }
-
-    .card-tag {
-      @include pill-tag($color-neutral-900, $subject-color-50, $subject-color-100);
-      padding: 0 0.7em;
-      margin: 0.5rem 0.5rem 0 0;
-      border-radius: 15px;
-      font-size: 1rem;
-    }
-  }
+.list-group-links li a.card-tag {
+  @include pill-tag($color-neutral-900, var(--subject-color-50), var(--subject-color-100));
+  font-family: $secondary-font;
+  padding: 0.15rem 0.8rem;
+  margin: 0.5rem 0.5rem 0 0;
+  font-size: 14px;
 }
